--- a/includes/templates/local/bin/webserver/dockerfile
+++ b/includes/templates/local/bin/webserver/dockerfile
@@ -93,9 +93,9 @@ RUN curl -sL https://npmjs.org/install.sh | sh
 RUN cd /root/npm && npm install --no-optional
 
 # DP Cli
-RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
-RUN chmod +x wp-cli.phar
-RUN mv wp-cli.phar /usr/local/bin/wp
+RUN curl https://drupalconsole.com/installer -L -o drupal.phar
+RUN mv drupal.phar /usr/local/bin/drupal
+RUN chmod +x /usr/local/bin/drupal
 
 # Deployer
 RUN curl -LO https://deployer.org/deployer.phar
