--- a/includes/templates/local/php/app.ini
+++ b/includes/templates/local/php/app.ini
@@ -21,5 +21,5 @@ upload_max_filesize = 100M
 post_max_size = 100M
 max_execution_time = 1000
 
-curl.cainfo="/etc/ssl/certs/cacert.pem"
-openssl.cafile="/etc/ssl/certs/cacert.pem"
+curl.cainfo="/etc/ssl/certs/VAR_PROJECT_ID.pem"
+openssl.cafile="/etc/ssl/certs/VAR_PROJECT_ID.pem"
