Add insecure flag for composer and re-enable some drupal console command

--- a/includes/templates/local/config.yml
+++ b/includes/templates/local/config.yml
@@ -24,6 +24,7 @@ services:
       - ./ssh:/root/.ssh
       - ./npm/package.json:/root/npm/package.json
       - ./npm/gulpfile.js:/root/npm/gulpfile.js
+      - ./curl/.curlrc:/root/.curlrc
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: VAR_LOCAL_DP_USER
